# GraphRag

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  test_keys_models.py
.github/workflows/: ci.yml  cicd.yml
app/: config.py  llm_client.py  logger.py  main.py  tire_detector.py
app/api/: __init__.py
app/api/v1/: __init__.py  chat.py  detect.py  main_routes.py
app/cypher/: cypher_mapper.py
app/detect/: __init__.py  models.py  ocr.py  pipeline.py  preprocess.py  segment.py  unwrap.py  utils.py
app/embedding/: __init__.py  query_embedder.py
app/fallback/: __init__.py  llm_fallback.py
app/mapper/: mapper.py
app/matching/: __init__.py  question_bank.py  semantic_matcher.py
app/models/models/: paddle_dict.txt  step1_segmentation.py  step2_unwrap.py  step3_preprocessing.py  step4_recognition.py  tire_recognition.py
app/models/models/tire_infer_v3/: inference.pdmodel  inference.yml
app/models/models/tire_infer_v6/: tire_dict.txt
app/pipeline/: examples.py  orchestrator_v4.py  orchestrator_v5.py  prompts.py  schema.py
app/response/: __init__.py  builder.py  normalizer.py
app/retriever/: hybrid_retriever.py  mapper.py  model_manager.py  value_store.py
app/services/: __init__.py  embedding_service.py  llm_service.py  neo4j_service.py
app/templates/: __init__.py  chat.html
app/templates/answers/: brand.md  compare.md  list.md  load.md  max.md  no_match.md  pressure.md  price.md  specs.md  speed.md  tube.md
graph_rag_enterprise/: .env
model_capstone/model_capstone/tire_infer_v6/: inference.pdiparams.info  inference.yml
