[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-service"
version = "1.0.0"
description = "Graph RAG service for tire shop - Neo4j + Gemini AI"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "neo4j>=5.20.0",
    "numpy>=1.26.0,<2.0.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "opencv-python>=4.11.0",
    "torch==2.3.0",
    "ultralytics>=8.3.0",
    "rapidfuzz>=3.0.0",
    "paddlepaddle>=3.3.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools.packages.find]
include = ["app*"]
